--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,2 +1,5 @@
-- @disciplines.each do |discipline|
-  %p= discipline.name
+- @subjects.each do |subject|
+  .page-header
+    %h1
+      = subject.name
+      %small Top Rated Topics
