Add Discplines and barebones navigation header

--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -1,14 +1,22 @@
 %aside
   %h1 Mentorwise
+%header
+  #nav-button
+  #nav-section
+    Section Here
+= render partial: 'nav_dropdown', locals: {disciplines: @disciplines}
 %main
-  - @topics.each do |topic|
-    - topic_class = topic.name.downcase.gsub(' ', '-')
-    %article{class: topic_class}
-      %h1
-        = topic.name
-      - topic.guides.each do |guide|
-        .guide{class: topic_class}
-          .title
-            = guide.title
-          .tags
-            = "##{guide.topics.map(&:name).join(', #')}"
+  - @disciplines.each do |discipline|
+    %h1
+      = discipline.name
+    - discipline.topics.each do |topic|
+      - topic_class = topic.name.downcase.gsub(' ', '-')
+      %article{class: topic_class}
+        %h1
+          = topic.name
+        - topic.guides.each do |guide|
+          .guide{class: topic_class}
+            .title
+              = guide.title
+            .tags
+              = "##{discipline.name} ##{guide.topics.map(&:name).join(', #')}"
