--- a/app/assets/stylesheets/landing/index.css.scss
+++ b/app/assets/stylesheets/landing/index.css.scss
@@ -5,6 +5,7 @@ aside {
   width: 220px;
   height: 100%;
   background-color: #34495e;
+  z-index: 0;
 
   h1 {
 
@@ -16,8 +17,57 @@ aside {
   }
 }
 
+header {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 2;
+  width: 200px;
+  height: 50px;
+
+  display: -moz-box;
+  -moz-box-orient: horizontal;
+  -moz-box-pack: center;
+  -moz-box-align: center;
+  display: -webkit-box;
+  -webkit-box-orient: horizontal;
+  -webkit-box-pack: center;
+  -webkit-box-align: center;
+
+  #nav-button {
+    position: relative;
+    display: inline-block;
+    height: 50px;
+    width: 50px;
+    background-color: #2980b9;
+  }
+
+  #nav-section {
+    position: relative;
+    display: inline-block;
+    top: -15px;
+    line-height: 20px;
+    font-size: 24px;
+  }
+}
+
+#nav-dropdown {
+  position: fixed;
+  right: 49px;
+  top: 60px;
+  z-index: 4;
+  display: none;
+
+  ul {
+    list-style-image: url('http://placehold.it/40x40');
+    list-style-position: outside;
+  }
+}
+
+
 main {
   margin-left: 216px;
+  z-index: 1;
 
   article {
 
