--- a/app/views/landing/_nav_dropdown.html.haml
+++ b/app/views/landing/_nav_dropdown.html.haml
@@ -2,4 +2,5 @@
   %ul
     - disciplines.each do |discipline|
       %li
-        = discipline.name
+        .discipline
+          = discipline.name
