Make nav dropdown dynamic based on scroll position

--- a/app/views/landing/_nav_dropdown.html.haml
+++ b/app/views/landing/_nav_dropdown.html.haml
@@ -1,6 +1,6 @@
 #nav-dropdown
   %ul
     - disciplines.each do |discipline|
-      %li
+      %li{'data-discipline' => discipline.name}
         .discipline
           = discipline.name
