--- a/app/assets/stylesheets/landing/index.css.scss
+++ b/app/assets/stylesheets/landing/index.css.scss
@@ -22,7 +22,7 @@ header {
   top: 10px;
   right: 10px;
   z-index: 2;
-  width: 200px;
+  width: auto;
   height: 50px;
 
   display: -moz-box;
@@ -49,27 +49,29 @@ header {
     line-height: 20px;
     font-size: 24px;
   }
+
+  #nav-dropdown {
+    position: fixed;
+    padding-left: 5px;
+    top: 60px;
+    z-index: 4;
+    padding-top: 4px;
+    display: none;
+
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    li {
+      background: url('http://placehold.it/40x40') no-repeat left center;
+      padding: 15px 1px 15px 46px;
+    }
+  }
 }
 
-#nav-dropdown {
-  position: fixed;
-  right: 49px;
-  top: 60px;
-  z-index: 4;
-  padding-top: 4px;
-  display: none;
 
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  li {
-    background: url('http://placehold.it/40x40') no-repeat left center;
-    padding: 15px 1px 15px 46px;
-  }
-}
 
 main {
   margin-left: 216px;
